---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 2025-06-12
  Changes:
    - Tiers for Jahtra and Paracelsin added.
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2025-06-11
  Changes:
    - Moved the 'tier' property to PlanetsLib from Organized Solar System, allowing other authors to make use of it. The tier is a number assigned to each planet to indicate where it likely appears in Space Age gameplay progression.
    - Rubia tier set to 4.5.
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 2025-06-02
  Changes:
    - Russian translation updated.
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2025-05-25
  Changes:
    - Corrected the locale entries for cargo drops to remove the reference to construction robots.
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2025-05-21
  Changes:
    - Deprecated the implicit APIs planetslib_sort_sciences and planetslib_ensure_all_packs_from_vanilla_lab in favor of PlanetsLib.sort_science_pack_names and PlanetsLib.add_science_packs_from_vanilla_lab_to_technology.
    - PlanetsLib no longer modifies the promethium-science-pack and research-productivity technologies to add packs from vanilla labs to them.
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2025-05-15
  Changes:
    - Renamed the surface conditions Oxygen, Nitrogen, Carbon Dioxide and Argon to Atmospheric Oxygen, Atmospheric Nitrogen, Atmospheric Carbon Dioxide and Atmospheric Argon.